--- a/YB-YH/分拦控制器 导航控制器/YB-YH.plist
+++ b/YB-YH/分拦控制器 导航控制器/YB-YH.plist
@@ -12,7 +12,7 @@
 		<key>NAVBAR_TITLE_IMAGE_NAME</key>
 		<string></string>
 		<key>CLASS_NAME</key>
-		<string>ShouViewController</string>
+		<string>HomeVC</string>
 	</dict>
 	<dict>
 		<key>TABBAR_IMAGE_NAME</key>
